--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,5 +19,5 @@ jobs:
         uses: bridgecrewio/checkov-action@master
         with:
           directory : .deploy/terraform
-          skip_check: CKV_AWS_42
+          # skip_check: CKV_AWS_42
           framework : terraform 
