--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,7 +9,7 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@master
       - name: Set up Python 3.8
         uses: actions/setup-python@v1
         with:
@@ -20,5 +20,4 @@ jobs:
         with:
           directory : .deploy/terraform
           skip_check: CKV_AWS_42
-          list      : true
           framework : terraform 
