--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,4 +20,5 @@ jobs:
         with:
           directory : .deploy/terraform
           skip_check: CKV_AWS_42
+          soft_fail : true
           framework : terraform 
