--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,14 +1,6 @@
 name: Checkov Scan
 on: [push]
 
-variables:
-- name: "checks_to_skip"
-  value: "CKV_AWS_42"
-
-
-# Checkov_Checks_To-Skip:
-#   CHECKOV_CHECKS_TO_SKIP: "CKV_AWS_42"
-
 jobs:
   build:
 
@@ -24,7 +16,5 @@ jobs:
         uses: bridgecrewio/checkov-action@master
         with:
           directory : .deploy/terraform
-          skip_check: "{{ variables.checks_to_skip }}"
-          # soft_fail : false
-          # quiet     : false
+          skip_check: CKV_AWS_42
           framework : terraform 
